[package]
name = "avr-avogadro"
version = "0.1.0"
authors = ["Matías Lafroce <mlafroce@gmail.com>"]
edition = "2018"
links = "gcc"
build = "build.rs"

[lib]
crate-type = ["rlib", "dylib"]

[profile.release]
debug = true

[dependencies]
libc = "0.2"
log = "0.4"
env_logger = "0.9"
ihex = "3.0"

[build-dependencies]
cmake = "0.1"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }
